# monitoring-dongle

./: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.defaults
include/: hw_config.h  info_helper.h  lgfx_dongle.h  wifi_station.h
lib/ring_buffer/src/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.h
lib/serializer/src/: CMakeLists.txt  serializer.cpp  serializer.h
src/: CMakeLists.txt  idf_component.yml  info_helper.cpp  lgfx_dongle.cpp  main.cpp  wifi_station.cpp
test/test_helper/: test_main.cpp
test/test_ring_buffer/: test_main.cpp
test/test_serializer/: test_main.cpp
